[package]
name = "yui-kh"
version = "0.2.0"
authors = ["Taketo Sano <taketo1024@gmail.com>"]
edition = "2021"
license = "MIT"
description = "YUI-Kh"

[[bin]]
name = "ykh"
path = "src/bin/main.rs"

[lib]
path = "src/lib/lib.rs"

[features]
default = ["poly"]
all = ["poly", "qint"]
poly = []
qint = []
i128 = []
bigint = []
old = []

[profile.release]
debug = true
overflow-checks = true

[dependencies]
yui  =         { git = "https://github.com/taketo1024/yui", branch = "develop" }
yui-link =     { git = "https://github.com/taketo1024/yui", branch = "develop" }
yui-matrix =   { git = "https://github.com/taketo1024/yui", branch = "develop" }
yui-homology = { git = "https://github.com/taketo1024/yui", branch = "develop" }
# yui  =         { path = "../yui/yui" }
# yui-link =     { path = "../yui/yui-link" }
# yui-matrix =   { path = "../yui/yui-matrix" }
# yui-homology = { path = "../yui/yui-homology" }
auto-impl-ops = "0.2.1"
cartesian = "0.2.1"
clap = { version = "4.5.17", features = ["derive", "cargo"] }
csv = "1.3.0"
delegate = "0.13.0"
derive_more = { version = "1.0.0", features = ["display", "debug"] }
grouping_by = "0.2.2"
indexmap = { version = "2.5.0", features = ["serde"] }
log = "0.4.22"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regex = "1.10.6"
serde_json = "1.0.128"
simplelog = "0.12.2"
string-builder = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
cfg-if = "1.0.0"
itertools = "0.13.0"
